<resources>
    <string name="app_name">DevApp20211</string>
    <string name="search_hint">Search</string>
    <string name="placeholder_benefits_description">Description fruit benefits</string>
    <string name="placeholder_fruit_name">Fruit name</string>
    <string name="insert_the_fruit_name">Insert the fruit name</string>
    <string name="describe_the_benefits">Describe the benefits</string>
    <string name="description_content_fruit_image">description_content_fruit_image</string>
    <string name="save_fruit">Save Fruit</string>
    <string name="tap_on_the_image_to_choose_an_image_from_your_gallery">Tap on the image to choose an image from your gallery</string>
    <string name="remove_fruit">Remove</string>
    <string name="add_fruit_menu">Add</string>
    <string name="remove_fruit_menu">Remove</string>
    <string name="edit_fruit_menu">Edit</string>
    <string name="warning_title">warning title</string>
    <string name="warning_description_duplicated">Please, your fruit name already exists on the list. Consider create a new.</string>
    <string name="warning_description_remove">Do you really want to remove this item from the list?</string>
    <string name="warning_button_title">Exit</string>
    <string name="warning_default_title">Warning!</string>
    <string name="dialog_btn_title_cancel">Cancel</string>
    <string name="dialog_btn_title_remove">Remove</string>
</resources>