<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/dialog_warning_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/warning_title"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/default_cesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_warning_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxWidth="200dp"
        android:text="@string/warning_description_duplicated"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/dialog_warning_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_warning_title" />

    <Button
        android:id="@+id/dialog_warning_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/warning_button_title"
        android:textAllCaps="false"
        android:textColor="@color/default_cesar"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintBottom_toTopOf="@id/dialog_warning_frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/dialog_warning_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/default_cesar"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>