<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    tools:context=".activities.AddFruitsActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="20dp"
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgv_add_fruit_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/description_content_fruit_image"
            android:src="@drawable/image_placeholder" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeColor="@color/default_cesar"
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/insert_the_fruit_name"
        app:hintTextColor="@color/default_cesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:maxLength="30"
            android:minWidth="200dp"
            android:maxWidth="300dp"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxStrokeColor="@color/default_cesar"
        app:hintTextColor="@color/default_cesar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_benefits"
            android:minWidth="200dp"
            android:maxWidth="300dp"
            android:textCursorDrawable="@null"
            android:maxLength="148"
            android:maxLines="5"
            android:imeOptions="actionDone"
            android:gravity="center"
            android:hint="@string/describe_the_benefits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/horirontal_fruits_placeholder" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vertical_fruits_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>